--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <section class="latest-posts">
         <h2>Latest Posts</h2>
         <!-- Carousel / Slider for latest blog posts will go here -->
-        <div id="posts-container"></div>
+        <div id="posts-container" class="posts-container"></div>
       </section>
     </main>
 
