improved hamburger menu

--- a/post.html
+++ b/post.html
@@ -12,6 +12,6 @@
     </main>
 
     <script type="module" src="js/post.js"></script>
-    <!-- JavaScript to load the individual post -->
+    <script src="components/js/load-header.js"></script>
   </body>
 </html>
