improved styles and finished contact form

--- a/index.html
+++ b/index.html
@@ -37,7 +37,12 @@
         </p>
       </section>
       <section class="latest-posts">
-        <h2 class="heading">Latest Posts</h2>
+        <div class="heading-container">
+          <h2 class="heading">
+            Latest Posts
+            <div class="styled-heading"></div>
+          </h2>
+        </div>
         <div class="carousel-container">
           <button class="carousel-prev">
             <span class="material-icons-outlined"> chevron_left </span>
