--- a/contact.html
+++ b/contact.html
@@ -2,26 +2,67 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta
+      name="description"
+      content="Blog site about how to make your life easier, better and cooler."
+    />
+    <meta
+      name="keywords"
+      content="Easy life, Better life, Cool life, Easier, Better, Cooler, Easier/Better/Cooler, Easier-Better-Cooler, Easier_Better_Cooler Blog Site"
+    />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Easier/Better/Cooler</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/styles.css" />
-    <!-- Additional CSS files here -->
+    <link rel="stylesheet" href="css/contact.css" />
   </head>
   <body>
     <main>
-      <section class="latest-posts">
-        <h2>Latest Posts</h2>
-        <!-- Carousel / Slider for latest blog posts will go here -->
-      </section>
+      <div class="contact-section">
+        <h1 class="contact-heading">We'd Love to Hear From You!</h1>
+        <div class="contact-text">
+          Got a question, a suggestion, or a brilliant idea? Or maybe you just
+          want to say hi? We're all ears! Whether it's feedback, a personal
+          story related to ourtopics, or just a quick hello, your messages
+          brighten our day. We'll get back to you as soon as we can!
+        </div>
+        <form id="contactForm">
+          <label for="name">Name:</label>
+          <input type="text" id="name" name="name" required />
+          <div id="nameError" class="error"></div>
 
-      <!-- Add other sections as necessary, e.g., an introductory section, featured categories, etc. -->
+          <label for="email">Email:</label>
+          <input type="email" id="email" name="email" required />
+          <div id="emailError" class="error"></div>
+
+          <label for="subject">Subject:</label>
+          <input type="text" id="subject" name="subject" required />
+          <div id="subjectError" class="error"></div>
+
+          <label for="message">Message:</label>
+          <textarea id="message" name="message" required></textarea>
+          <div id="messageError" class="error"></div>
+
+          <button type="submit">Send Message</button>
+        </form>
+      </div>
     </main>
 
     <footer>
       <p>&copy; 2023 Easier/Better/Cooler. All rights reserved.</p>
     </footer>
 
-    <script src="js/main.js"></script>
+    <script src="js/contact.js"></script>
     <script src="components/js/load-header.js"></script>
   </body>
 </html>
