working on single post page

--- a/about.html
+++ b/about.html
@@ -2,26 +2,103 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta
+      name="description"
+      content="Blog site about how to make your life easier, better and cooler."
+    />
+    <meta
+      name="keywords"
+      content="Easy life, Better life, Cool life, Easier, Better, Cooler, Easier/Better/Cooler, Easier-Better-Cooler, Easier_Better_Cooler Blog Site"
+    />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Easier/Better/Cooler</title>
+    <title>About Easier/Better/Cooler</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/styles.css" />
-    <!-- Additional CSS files here -->
+    <link rel="stylesheet" href="css/about.css" />
   </head>
   <body>
     <main>
-      <section class="latest-posts">
-        <h2>Latest Posts</h2>
-        <!-- Carousel / Slider for latest blog posts will go here -->
+      <section class="about-section">
+        <div class="heading-container">
+          <h1 class="heading desktop">
+            About Easier/Better/Cooler
+            <div class="styled-heading"></div>
+          </h1>
+          <div class="mobile-heading">
+            <h1 class="heading mobile">
+              About
+              <div class="styled-heading"></div>
+            </h1>
+            <h1 class="heading mobile">
+              Easier/Better/Cooler
+              <div class="styled-heading mobile"></div>
+            </h1>
+          </div>
+        </div>
+        <div class="about">
+          <h3 class="about-heading">
+            Welcome to 'Easier/Better/Cooler,' a space where creativity meets
+            practicality.
+          </h3>
+          <div class="about-text">
+            In a world that's constantly evolving, it's easy to get lost in the
+            noise of endless innovation. At 'Easier/Better/Cooler,' we believe
+            that life's complexities can be met with simple, elegant solutions.
+            Our mission is to bring you the latest and most effective ideas in
+            making your everyday life not just more manageable, but also more
+            enjoyable.
+          </div>
+          <h3 class="about-heading">Our Philosophy</h3>
+          <div class="about-text">
+            We embrace a philosophy that intertwines simplicity with
+            sophistication. Every article, every post, every suggestion aims to
+            add value to your daily routine while fostering an eco-conscious
+            mindset. We're dedicated to exploring and sharing ways to live a
+            lifestyle that's both exciting and sustainable.
+          </div>
+          <h3 class="about-heading">What We Offer</h3>
+          <div class="about-text">
+            From smart technology that simplifies your day to eco-friendly
+            fashion tips that make you stand out responsibly, we cover a broad
+            spectrum of topics. Our content is curated to inspire, educate, and
+            help you navigate through the ever-changing world of technology,
+            lifestyle, and sustainable living.
+          </div>
+          <h3 class="about-heading">Join Our Community</h3>
+          <div class="about-text">
+            We're not just about sharing ideas; we're about building a
+            community. We love hearing from you! Whether it's a suggestion for a
+            topic you'd like us to cover, a question about something we've
+            posted, or just a quick hello, we're here to listen. Your input
+            helps us grow and tailor our content to what truly matters to you.
+          </div>
+          <h3 class="about-heading">Let's Connect</h3>
+          <div class="about-text">
+            Got a question, a suggestion, or an idea you're burning to share?
+            We're all ears! Drop us a message through our
+            <a href="/contact.html">Contact</a> page, and let's start a
+            conversation that could make life a little bit easier, better, and
+            cooler for everyone.
+          </div>
+        </div>
       </section>
-
-      <!-- Add other sections as necessary, e.g., an introductory section, featured categories, etc. -->
     </main>
 
     <footer>
       <p>&copy; 2023 Easier/Better/Cooler. All rights reserved.</p>
     </footer>
 
-    <script src="js/main.js"></script>
+    <!-- <script src="js/about.js"></script> -->
     <script src="components/js/load-header.js"></script>
   </body>
 </html>
