--- a/contact.html
+++ b/contact.html
@@ -38,19 +38,19 @@
         </div>
         <form id="contactForm">
           <label for="name">Name:</label>
-          <input type="text" id="name" name="name" required />
+          <input type="text" id="name" name="name" />
           <div id="nameError" class="error"></div>
 
           <label for="email">Email:</label>
-          <input type="email" id="email" name="email" required />
+          <input type="email" id="email" name="email" />
           <div id="emailError" class="error"></div>
 
           <label for="subject">Subject:</label>
-          <input type="text" id="subject" name="subject" required />
+          <input type="text" id="subject" name="subject" />
           <div id="subjectError" class="error"></div>
 
           <label for="message">Message:</label>
-          <textarea id="message" name="message" required></textarea>
+          <textarea id="message" name="message"></textarea>
           <div id="messageError" class="error"></div>
 
           <button type="submit">Send Message</button>
