--- a/about.html
+++ b/about.html
@@ -95,6 +95,34 @@
     </main>
 
     <footer>
+      <div class="social-icons">
+        <a
+          class="social-icon"
+          href="https://www.facebook.com"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          <img src="/assets/icons/facebook.png" alt="Facebook link" />
+        </a>
+
+        <a
+          class="social-icon"
+          href="https://www.instagram.com"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          <img src="/assets/icons/instagram.png" alt="Instagram link" />
+        </a>
+
+        <a
+          class="social-icon"
+          href="https://www.twitter.com"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          <img src="/assets/icons/twitter.png" alt="Twitter link" />
+        </a>
+      </div>
       <p>&copy; 2023 Easier/Better/Cooler. All rights reserved.</p>
     </footer>
 
