improved error handling

--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta
       name="description"
-      content="Blog site about how to make your life easier, better and cooler."
+      content="About page for the site Easier/Better/Cooler"
     />
     <meta
       name="keywords"
@@ -126,7 +126,6 @@
       <p>&copy; 2023 Easier/Better/Cooler. All rights reserved.</p>
     </footer>
 
-    <!-- <script src="js/about.js"></script> -->
     <script src="components/js/load-header.js"></script>
   </body>
 </html>
