--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta
       name="description"
-      content="Blog site about how to make your life easier, better and cooler."
+      content="All posts page for the site Easier/Better/Cooler"
     />
     <meta
       name="keywords"
@@ -33,10 +33,10 @@
         <!-- Error toast -->
       </div>
       <div class="heading-container">
-        <h2 class="heading">
+        <h1 class="heading">
           All Posts
           <div class="styled-heading"></div>
-        </h2>
+        </h1>
       </div>
       <section
         id="all-blog-posts"
