--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta
       name="description"
-      content="Blog site about how to make your life easier, better and cooler."
+      content="Contact page for the site Easier/Better/Cooler"
     />
     <meta
       name="keywords"
@@ -12,7 +12,7 @@
     />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Easier/Better/Cooler</title>
+    <title>About Easier/Better/Cooler | Contact</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -23,8 +23,8 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="css/styles.css" />
     <link rel="stylesheet" href="css/contact.css" />
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
     <main>
@@ -90,7 +90,7 @@
       <p>&copy; 2023 Easier/Better/Cooler. All rights reserved.</p>
     </footer>
 
-    <script src="js/contact.js"></script>
     <script src="components/js/load-header.js"></script>
+    <script src="js/contact.js"></script>
   </body>
 </html>
