--- a/post.html
+++ b/post.html
@@ -2,6 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta
+      name="description"
+      content="Specific page for a blog post from the site Easier/Better/Cooler"
+    />
+    <meta
+      name="keywords"
+      content="Easy life, Better life, Cool life, Easier, Better, Cooler, Easier/Better/Cooler, Easier-Better-Cooler, Easier_Better_Cooler Blog Site"
+    />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title></title>
     <link rel="stylesheet" href="css/styles.css" />
